src2/objects/IoT_Error_Log__c.object
<CustomObject>
    <description>Save the Error Logs from IoT when an error appears in the message process</description>
    <fields>
        <fullName>All_Machine_Message__c</fullName>
        <description>It contains all JSON message from the machine</description>
        <label>All Machine Message</label>
        <length>21000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chassis_Serial_Number__c</fullName>
        <description>It contains the Serial Number of the Chassis</description>
        <label>Chassis Serial Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Piece_of_JSON__c</fullName>
        <description>It contains the piece of JSON which trigger the error</description>
        <label>Error Piece of JSON</label>
        <length>21000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Module_Serial_Number__c</fullName>
        <description>It contains the Serial Number of the Module</description>
        <label>Module Serial Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orchestration_MID__c</fullName>
        <description>It contains the MID of the Orchestration where the Error appeared</description>
        <label>Orchestration MID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orchestration__c</fullName>
        <description>It contains the name of the orchestration where the error appeared</description>
        <label>Orchestration</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Response__c</fullName>
        <label>SF Response</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>It contains the name of the State where the error appeared</description>
        <label>State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>Unique ID of the Message generated by AWS</description>
        <label>UUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>IoT Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Chassis_Serial_Number__c</columns>
        <columns>Module_Serial_Number__c</columns>
        <columns>Error_Message__c</columns>
        <columns>UUID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IoTErr-{0000}</displayFormat>
        <label>IoT Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IoT Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>